@@ -84,7 +84,7 @@ d_maintargets_list = _ar # 1;
 //publicVariable "d_cur_sm_idx";
 d_resolved_targets = _ar # 4;
 publicVariable "d_resolved_targets";
-if (d_with_targetselect == 0) then {
+if (d_with_targetselect_count > 0) then {
 	d_mttargets_ar = [];
 	{
 		if !((_x # 3) in d_resolved_targets) then {
